Fix overflow on Education section

--- a/src/components/sections/Education/Education.scss
+++ b/src/components/sections/Education/Education.scss
@@ -34,7 +34,7 @@
     }
     .content {
       @include expandBoxIn();
-      overflow-x: hidden;
+      overflow: hidden;
       &.expanded {
         @include expandBoxOut();
         max-height: 40rem;
